--- a/demo/vue/anycluster-demo/package.json
+++ b/demo/vue/anycluster-demo/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "anycluster-client": "^0.1.1",
+    "anycluster-openlayers": "^0.2.1",
     "core-js": "^3.8.3",
     "ol": "^7.3.0",
     "vue": "^3.2.13"
