--- a/anycluster-client/anycluster-leaflet/package.json
+++ b/anycluster-client/anycluster-leaflet/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anycluster-leaflet",
-  "version": "0.3.10",
+  "version": "0.3.12",
   "description": "anycluster client for Leaflet",
   "main": "dist/main.js",
   "lib": "lib/anycluster-leaflet.js",
@@ -37,7 +37,7 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "anycluster-client": "^0.3.10",
+    "anycluster-client": "0.3.12",
     "leaflet": "^1.9.3"
   },
   "targets": {
